Bug 68728 - segfault in gen6_render_composite
Summary: segfault in gen6_render_composite
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) All
: medium blocker
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-29 20:43 UTC by Sami Farin
Modified: 2013-08-30 08:00 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorglog (30.32 KB, text/plain)
2013-08-29 20:44 UTC, Sami Farin
no flags Details

Description Sami Farin 2013-08-29 20:43:12 UTC
instant crash on starting google-chrome with git-92a43caab96e7f
but c451a471fbe works

(EE) Backtrace:
(EE) 0: X (OsSigHandler+0x49) [0x46e849]
(EE) 1: /lib64/libpthread.so.0 (__restore_rt+0x0) [0x7f562aa1bfff]
(EE) 2: /usr/lib64/xorg/modules/drivers/intel_drv.so (gen6_render_composite+0xd9d) [0x7f5627d6d7fd]
(EE) 3: /usr/lib64/xorg/modules/drivers/intel_drv.so (sna_composite+0x7b8) [0x7f5627ceb388]
(EE) 4: X (damageComposite+0x162) [0x520652]
(EE) 5: X (ProcRenderComposite+0x14a) [0x519f5a]
(EE) 6: X (Dispatch+0x3c7) [0x436e37]
(EE) 7: X (main+0x3ea) [0x4263ea]
(EE) 8: /lib64/libc.so.6 (__libc_start_main+0xf5) [0x7f5629428a05]
(EE) 9: X (deregister_tm_clones+0x11) [0x4266f9]
(EE) 10: ? (?+0x11) [0x11]
(EE) 
(EE) Segmentation fault at address 0x8
(EE) 
Fatal server error:
(EE) Caught signal 11 (Segmentation fault). Server aborting
(EE)
Comment 1 Sami Farin 2013-08-29 20:44:01 UTC
Created attachment 84882 [details]
xorglog
Comment 2 Chris Wilson 2013-08-29 20:53:49 UTC
Please attach gdb, and do a 'bt full' after the crash.
Comment 3 Chris Wilson 2013-08-30 08:00:47 UTC
commit 6d99249c580cfb062a05ce1da446410741eb1223
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Aug 30 03:03:58 2013 +0100

    sna: Protect against unattached pixmaps when peeking inside for a GPU bo
    
    Prevent a NULL dereference for the small system pixmaps. Introduced with
    
    commit f22d7f68b8b1bd5caf5ae831fca63eb1e6957520
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Wed Aug 28 14:24:33 2013 +0100
    
        sna/gen6+: Improve ring stickyness for BLT composite ops
    
    Reported-by: Sami Farin <hvtaifwkbgefbaei@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=68728
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.