sna: Protect against unattached pixmaps when peeking inside for a GPU bo

Prevent a NULL dereference for the small system pixmaps. Introduced with

commit f22d7f68b8b1bd5caf5ae831fca63eb1e6957520
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Aug 28 14:24:33 2013 +0100

    sna/gen6+: Improve ring stickyness for BLT composite ops

Reported-by: Sami Farin <hvtaifwkbgefbaei@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=68728
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>